c4prj2_input/grade.txt
Grading at Fri Aug  2 23:31:31 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:21:24: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘n_cards’
  if (deck->n_cards < fc->n_cards) {
                        ^
Compilation of future.c failed

Overall Grade: F
